tests/rosetta/out/C/apply-a-callback-to-an-array-2.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:43Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:43Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int _lambda0(int i) {
  char *tmp4 = _str(i * i);
  printf("%s\n", tmp4);
  return;
}

int _lambda1(int i) { return i * i; }

int _lambda2(int i) { return i * i; }

int each(list_int xs, void (*)(int) f) {
  for (int tmp1 = 0; tmp1 < xs.len; tmp1++) {
    int x = xs.data[tmp1];
    f(x);
  }
}

list_int Map(list_int xs, int (*)(int) f) {
  list_int r = list_int_create(0);
  for (int tmp2 = 0; tmp2 < xs.len; tmp2++) {
    int x = xs.data[tmp2];
    r = 0;
  }
  return r;
}

int main() {
  list_int s = list_int_create(5);
  s.data[0] = 1;
  s.data[1] = 2;
  s.data[2] = 3;
  s.data[3] = 4;
  s.data[4] = 5;
  list_int tmp3 = list_int_create(5);
  tmp3.data[0] = 1;
  tmp3.data[1] = 2;
  tmp3.data[2] = 3;
  tmp3.data[3] = 4;
  tmp3.data[4] = 5;
  each(tmp3, _lambda0);
  list_int tmp5 = list_int_create(5);
  tmp5.data[0] = 1;
  tmp5.data[1] = 2;
  tmp5.data[2] = 3;
  tmp5.data[3] = 4;
  tmp5.data[4] = 5;
  char *tmp6 = _str(Map(tmp5, _lambda1));
  list_int tmp7 = list_int_create(5);
  tmp7.data[0] = 1;
  tmp7.data[1] = 2;
  tmp7.data[2] = 3;
  tmp7.data[3] = 4;
  tmp7.data[4] = 5;
  char *tmp8 = _str(Map(tmp7, _lambda2));
  printf("%d\n", tmp8);
}

int main() {
  main();
  return 0;
}
